# tunery

./: .gitignore  AGENTS.md  CLAUDE.md  GUIDELINES.md  README.md  pyproject.toml
.cursor/rules/: index.mdc
docs/: GUIDELINES.md  SPEC.md
pdfbind/: index_gemini.py  indexer.py  main.py
tests/: test_bind_pdf.py  test_composer.py  test_detection.py  test_fuzzy_index.py  test_fuzzy_matching.py  test_index.py  test_main.py  test_render.py  try_index.py
tunery/: __init__.py  composer.py  fuzzy_index.py  index-creation-prompt.txt  index.py  main.py  render.py
