[project]
name = "pdfbind"
version = "0.1.1"
description = ""
readme = "README.md"
license = "Apache-2.0" 
authors = [
    { name = "Sasha Ovsankin", email = "sasha@ovsankin.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pikepdf>=9.2.1",
    "pyyaml>=6.0.2",
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "easyocr>=1.7.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "symspellpy>=6.9.0",
    "wordfreq>=3.1.1",
    "rapidfuzz>=3.10.0",
]

[project.scripts]
pdfbind = "pdfbind.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pdfbind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
