[project]
name = "tunery"
version = "0.5.0"
description = "Build PDF setbooks from sheet music collections"
readme = "README.md"
license = "Apache-2.0" 
authors = [
    { name = "Sasha Ovsankin", email = "sasha@ovsankin.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "cyclopts>=4.20.0",
    "google-cloud-vision>=3.11.0",
    "pdfplumber>=0.11.9",
    "pikepdf>=9.2.1",
    "pydantic>=2.12.4",
    "pymupdf>=1.27.2",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.0.0",
]

[project.scripts]
tunery = "tunery.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pywolf",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
pywolf = { path = "../pywolf" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tunery"]
